--- a/donutPieChart/index.html
+++ b/donutPieChart/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="app.css" />
     <script src="domo.js"></script>
     <script src="app.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
   </head>
   <body>
     <div>
