added XHR data access type

--- a/DataAccessTypesBase/index.html
+++ b/DataAccessTypesBase/index.html
@@ -12,18 +12,10 @@
       </div>
       <div id="domo_table"></div>
       <div id="domo_footer"></div>
-<!--
-      <div id="domo_dlabel"></div>
-      <div id="domo_clabel"></div>
-      <div id="domo_rlabel"></div>
--->
     	<div id="jquery_table"></div>
       <div id="jquery_footer"></div>
-<!--
-      <div id="jquery_dlabel"></div>
-      <div id="jquery_clabel"></div>
-      <div id="jquery_rlabel"></div>
--->
+      <div id="xhr_table"></div>
+      <div id="xhr_footer"></div>
     </div>
 
     <!-- domo.js optional utils -->
