--- a/DataAccessTypesBase/index.html
+++ b/DataAccessTypesBase/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="app.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
+    <script src="oboe.js"></script>
   </head>
   <body class="bgc">
     <div id = "page">
