--- a/DataAccessTypesBase/index.html
+++ b/DataAccessTypesBase/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="app.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-    <script src="oboe.js"></script>
+    <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script><script src="oboe.js"></script>
   </head>
   <body class="bgc">
     <div id = "page">
@@ -17,6 +17,8 @@
       <div id="jquery_footer"></div>
       <div id="xhr_table"></div>
       <div id="xhr_footer"></div>
+      <div id="oboe_table"></div>
+      <div id="oboe_footer"></div>
     </div>
 
     <!-- domo.js optional utils -->
