--- a/regression/AvatarTest/index.html
+++ b/regression/AvatarTest/index.html
@@ -1,25 +1,29 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="app.css">
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+		<script>$(document).ready(function(){getUsers();displayUser(defUser,0);});</script>
+<!-- 		
+		<script>$(document).ready(function(){getUsers();displayUser(defUser,0);});</script>
+-->		
 	 </head>
 	<body class="bgc">
-		<div>
+		<div id="avMain">
 			<div id="title">
-				<div class="build">Avatar</div>
-				<div class="logo"><img style="width: 60px; height: 60px;" alt="logo" src="/images/pokeball.png"></div>
-				<div class="date"><span class="migrate">CustomApp</span></div>
+				<div class="build">Viewer</div>
+				<div class="logo"><img class="avatar"" alt="logo" src="/images/pokeball.png"></div>
+				<div class="date"><span class="migrate">Avatar</span></div>
 			</div>
-			<div id="content"><img id="avatar" alt="" /><div id="table" class="op"><div id="utTitle"></div><div id="uTable"></div></div></div>
+			<div id="content"><img id="avatar" alt="" /><div id="table" class=""><div id="utTitle"></div><div id="uTable" class="op"></div></div></div>
 			<div id="userLabel" class="full op">
-				<div id="uName" class="ulWidth"></div><div id="uRole" class="urWidth"></div>
-				<div id="uEmail" class="ulWidth"></div><div id="uID" class="urWidth"></div>
-				<div id="uTitle" class="ulWidth"></div><div id="uPhone" class="urWidth"></div>
+				<div><div id="userName" class="uCells">User:</div><div id="uName" class="ulWidth"></div><div id="userRole" class="uCells">Role:</div><div id="uRole" class="urWidth"></div></div>
+				<div><div id="userEmail" class="uCells">Email:</div><div id="uEmail" class="ulWidth"></div><div id="userTitle" class="uCells">Title:</div><div id="uTitle" class="urWidth"></div></div>
+				<div><div id="userPhone" class="uCells">Phone:</div><div id="uPhone" class="ulWidth"></div><div id="userID" class="uCells">ID:</div><div id="uID" class="urWidth"></div></div>
 			</div>
+			<div id="totalUsers">&nbsp;</div>
+			<div id="viewFilters">&nbsp;</div>
 		</div>
 	<script src="domo.js"></script>
 	<script src="app.js"></script>
-	<!-- <div class="logo"><img style=" width: 100px; height: 100px;" alt="logo" src="/images/mudkip.png"></div>
-	<div class="image"><img id="avatar" style=" width: 100px; height: 100px;" alt="logo" src="/images/mudkip.png"></div>-->
 	</body>
 </html>
