--- a/regression/AvatarTest.3/index.html
+++ b/regression/AvatarTest.3/index.html
@@ -2,11 +2,10 @@
 	<head>
 		<link rel="stylesheet" href="app.css">
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
-		<script>$(document).ready(function(){createUserList();});</script>
-
+		<script>$(document).ready(function(){displayUser(defUser);userListCreated(false);getUsers();});</script>
+        <script src="domo.js"></script>
+	   <script src="app.js"></script>
 <!-- 		
-		<script>$(document).ready(function(){getUsers();displayUser(defUser,0);createUserList();});</script>
 		<script>$(document).ready(function(){getUsers();displayUser(defUser,0);});</script>
 -->		
 	 </head>
@@ -14,8 +13,8 @@
 		<div id="avMain">
 			<div id="title">
 				<div class="build">Viewer</div>
-				<div class="logo"><img class="avatar"" alt="logo" src="/images/pokeball.png"></div>
-				<div class="date"><span class="migrate">Avatar</span></div>
+				<div class="logo" onclick="displayUser(-1)"><img class="avatar"" alt="logo" src="/images/gAvatars.png"></div>
+				<div class="date"><span class="myAvatar" onclick="myAvatar()">Avatar</span></div>
 			</div>
 			<div id="content"><img id="avatar" alt="" /><div id="table" class=""><div id="utTitle"></div><div id="uTable" class="op"></div></div></div>
 			<div id="userLabel" class="full op">
