--- a/other/cory/sCalc.html
+++ b/other/cory/sCalc.html
@@ -1,18 +1,16 @@
+<!-- 
 <html>
-	<head>
+ -->
+ 	<head>
 		<link rel="stylesheet" href="css/nav.css" />
-		<link rel="stylesheet" href="app.css" />
+		<link rel="stylesheet" href="css/sCalc.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
-	<body>
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="calc.html">Calc</a></li>
-				<li><a href="sCalc.html">Super Calc</a></li>
-			</ul>
-		</nav>
-		<content>
+<!-- 
+	<body class="bw">
+		<content class="content">
+ -->
+ 		<main class="main">
 			<h1 onclick="resetAll()" class="mTop">Super Calc</h1>
 			<div class="center">
 				<input id="a" type="text" name="" value="5" class="iFields">
@@ -46,9 +44,16 @@
 					</div>
 				</div>
 			</div>
+		</main>
+<!-- 
 		</content>
-		<!-- domo.js optional utils -->
+ --> 		<!-- domo.js optional utils -->
+<!-- 
 		<script src="domo.js"></script>
 		<script src="app.js"></script>
-	</body>
+ -->
+		<script src="js/calc.js"></script>
+  	</body>
+<!-- 
 </html>
+ -->
