--- a/other/cory/index.html
+++ b/other/cory/index.html
@@ -3,14 +3,16 @@
 		<link rel="stylesheet" href="css/nav.css" />
 		<link rel="stylesheet" href="css/app.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script>$(document).ready(function(){home();});</script>
+
+<!--		<script>$("#content").load("home.html");</script>-->
 	</head>
 	<body>
 		<nav class="nav tabrow">
 			<ul>
-				<li class="tabrow"><a href="index.html">Home</a></li>
-				<li class="tabrow"><a href="calc.html" class="tabrow">Calc</a></li>
-				<li id="topBar" onclick="topBar2()">Calc Bar</li>
-				<li class="tabrow"><a href="sCalc.html">Super Calc</a></li>
+				<li id="home" onclick="home()" class="tabrow">Home</li>
+				<li id="calc" onclick="calc()" class="tabrow">Calc</li>
+				<li id="calc" onclick="sCalc()" class="tabrow">SuperCalc</li>
 			</ul>
 		</nav>
 		<content id="content" class="content">
