--- a/other/qualityAssurance/index.html
+++ b/other/qualityAssurance/index.html
@@ -1,11 +1,34 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="app.css" />
-  </head>
-  <body>
-    <h1>qualityAssurance</h1>
-    <!-- domo.js optional utils -->
-    <script src="domo.js"></script>
-    <script src="app.js"></script>
-  </body>
+	<head>
+	    <link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="css/nav.css" />
+		<link rel="stylesheet" href="css/app.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script>$(document).ready(function(){home();});</script>
+
+<!--		<script>$("#content").load("home.html");</script>-->
+	</head>
+	<body>
+		<div id="header"><div class="header domoFont white">DOMO&nbsp;-&nbsp;QA</div></div>
+		<div id="header2"><div class="header2 domoFont darkBlue">DOMO&nbsp;-&nbsp;QA</div></div>
+
+		<nav class="nav navFont darkBlue">
+			<ul>
+				<li id="home" onclick="home()" class="">Home</li>
+ 				<li id="sprintIssues" onclick="sprintIssues()" class="">Sprint Issues</li>
+				<li id="teams" onclick="teams()" class="">Teams</li>
+				<li id="servers" onclick="servers()" class="">Servers</li>
+			</ul>
+		</nav>
+
+		<content id="content" class="contentBox">
+
+		</content>
+		
+		<!-- domo.js optional utils -->
+		<script src="domo.js"></script>
+		<script src="app.js"></script>
+		<script src="js/nav.js"></script>
+		<script src="js/servers.js"></script>
+	</body>
 </html>
