up date to calc2

--- a/other/cory/index.html
+++ b/other/cory/index.html
@@ -12,7 +12,8 @@
 			<ul>
 				<li id="home" onclick="home()" class="tabrow">Home</li>
 				<li id="calc" onclick="calc()" class="tabrow">Calc</li>
-				<li id="calc" onclick="sCalc()" class="tabrow">SuperCalc</li>
+				<li id="calc2" onclick="calc2()" class="tabrow">Calc 2</li>
+				<li id="sCalc" onclick="sCalc()" class="tabrow">SuperCalc</li>
 			</ul>
 		</nav>
 		<content id="content" class="content">
