can now see server list

--- a/other/qualityAssurance/servers.html
+++ b/other/qualityAssurance/servers.html
@@ -4,7 +4,7 @@
 
 		<main id="main" class="main">
 			<h1 class="">Servers</h1>
-			<div id="center" class="center"></div>
+			<div id="serverBody" class="center"></div>
 		</main>
 		<script src="js/servers.js"></script>
 
