--- a/other/qualityAssurance/servers.html
+++ b/other/qualityAssurance/servers.html
@@ -2,10 +2,10 @@
 		<link rel="stylesheet" href="css/servers.css" />
 	</head>
 
-		<main id="main" class="main">
-			<h1 class="">Servers</h1>
-			<div id="serverBody" class="center"></div>
-		</main>
+		<div id="serverMain" class="main">
+			<h1 id="serverTitle" class="titleFade">Servers Loading....</h1>
+			<div id="serverBody" class="fullwidth center serverFade"></div>
+		</div>
 		<script src="js/servers.js"></script>
 
 
