--- a/other/qualityAssurance/sprintIssues.html
+++ b/other/qualityAssurance/sprintIssues.html
@@ -1,9 +1,40 @@
  	<head>
 		<link rel="stylesheet" href="css/sprint.css" />
+		<link rel="stylesheet" href="css/app.css" />
+		<script src="js/sprint.js"></script>
+		<script src="domo.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+		<script>$(document).ready(function(){getSprintsList();showDate();});</script>
 	</head>
 
-		<main class="main">
-			<h1 class="mTop">Sprint Issues</h1>
-			<div class="center"></div>
-		</main>
-		<script src="js/home.js"></script>
+	<main class="main">
+		<div class="center">
+
+	<div id="page">
+		<div id="buttonOptions" class="darkBlueBG" >
+			<div id="navItem" class="pTop">
+					<ul class="tabrow">
+						<li><select id="sprintList" class="buttonM" onchange="chooseSprint()">
+								<option value="0">Select Release</option>
+								<option value="1">All Issues</option>
+							</select>
+						</li>
+						<li><button id="fireAll" class="fbuttons buttonM" onclick="showSelection('fire',0)">Fire Items</button></li>
+						<li><button id="fire5" class="fbuttons buttonM" onclick="showSelection('fire',5)">Fire Top 5</button></li>
+						<li><button id="fire10" class="fbuttons buttonM" onclick="showSelection('fire',10)">Fire Top 10</button></li>
+						<li><button id="allIssues" class="buttonM" onclick="showSelection('all',9999)">All Issues</button></li>
+					</ul>
+			</div>
+		</div>
+  		<div id="contentSection" class="whiteBG clear">
+			<div id="fire">
+                <div id="groupTitle" class="title"><h1 class="mTop">Quality Assurance</h1></div>
+				<div id="fireText"><div id="intro" class="intro"></div></div>
+			</div>
+		</div>
+		<div id="footer" class="domoBlueBG"><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
+	</div>
+
+		</div>
+	</main>
