--- a/other/qualityAssurance/teams.html
+++ b/other/qualityAssurance/teams.html
@@ -1,9 +1,11 @@
  	<head>
 		<link rel="stylesheet" href="css/teams.css" />
+		<script src="js/team.js"></script>
 	</head>
 
 		<main class="main">
 			<h1 class="mTop">Teams</h1>
 			<div class="center"></div>
 		</main>
-		<script src="js/home.js"></script>
+
+
