finished server page, team page

--- a/other/qualityAssurance/index.html
+++ b/other/qualityAssurance/index.html
@@ -16,7 +16,8 @@
 				<li id="home" onclick="home('home')"><a href="#" class="active">Home</a></li>
 				<li id="teams" onclick="teams('team')"><a href="#">Teams</a></li>
 				<li id="servers" onclick="servers('server')"><a href="#">Servers</a></li>
- 				<li id="sprints" onclick="sprints('sprint')"><a href="#">Sprints</a></li>
+				<li id="hfSquad" onclick="hfSquad('hfSquad')"><a href="#">Hotfix</a></li>
+				<li id="sprints" onclick="sprints('sprint')"><a href="#">Sprints</a></li>
 			</ul>
 			</div>
 		</menu>
@@ -31,5 +32,7 @@
 		<script src="js/nav.js"></script>
 		<script src="js/servers.js"></script>
 		<script src="js/sprint.js"></script>
+		<script src="js/team.js"></script>
+		<script src="js/hotfix.js"></script>
 	</body>
 </html>
