--- a/other/qualityAssurance/teams.html
+++ b/other/qualityAssurance/teams.html
@@ -1,11 +1,18 @@
  	<head>
 		<link rel="stylesheet" href="css/teams.css" />
+		<link rel="stylesheet" href="css/app.css" />		
 		<script src="js/team.js"></script>
 	</head>
-
-		<main class="main">
-			<h1 class="mTop">Teams</h1>
-			<div class="center"></div>
-		</main>
-
-
+		<div id="teamMain" class="teamMain">
+			<h1 id="teamTitle" class="titleFade">Quality Assurance by Team</h1>
+			<div id="teamBody" class="fullwidth teamFade">
+				<div id="teamLayout">
+					<div id="teamText">
+						<div class="floatLeft teamsList">Team</div><div class="floatLeft qaList">QA</div><div class="floatLeft featuresList">Features</div>
+					</div>
+					<div id="squadInfo" class="squadInfo"></div>
+					<div id="squadList" class="squadList">
+					</div>
+				</div>
+			</div>
+		</div>
