--- a/other/qualityAssurance/home.html
+++ b/other/qualityAssurance/home.html
@@ -3,7 +3,11 @@
 	</head>
 
 		<main class="main">
-			<h1 class="mTop">Quality Assurance</h1>
-			<div class="center"></div>
+			<h1 class="mTop titleFade">Quality Assurance</h1>
+			<div class="center"><b>Coming Soon:</b><br>
+				hotfix Squads<br>
+				crowd source links<br>
+				helpful links
+			</div>
 		</main>
 		<script src="js/home.js"></script>
