--- a/other/qualityAssurance/servers.html
+++ b/other/qualityAssurance/servers.html
@@ -3,9 +3,7 @@
 	</head>
 
 		<div id="serverMain" class="main">
-			<h1 id="serverTitle" class="titleFade">Servers Loading....</h1>
+			<h1 id="serverTitle" class="titleFade">Server List</h1>
 			<div id="serverBody" class="fullwidth center serverFade"></div>
 		</div>
 		<script src="js/servers.js"></script>
-
-
