--- a/other/qualityAssurance/hotfix.html
+++ b/other/qualityAssurance/hotfix.html
@@ -1,10 +1,25 @@
  	<head>
-		<link rel="stylesheet" href="css/home.css" />
-	</head>
+<!-- 
+		<link rel="stylesheet" href="css/app.css" />
 
-		<main class="main">
-			<h1 class="mTop titleFade">Hotfix Squads</h1>
-			<div class="center">Coming Soon:<br>
-			</div>
-		</main>
+		<link rel="stylesheet" href="css/home.css" />
+ -->
+		<link rel="stylesheet" href="css/hotfix.css" />
 		<script src="js/hotfix.js"></script>
+	</head>
+		<div id="hotfixMain" class="hotfixMain">
+			<h1 id="hotfixTitle" class="hotfixtitleFade">Hotfix Squads</h1>
+			<div id="hotfixBody" class="fullwidth hotfixFade">
+				<div id="hotfixLayout">
+					<div id="hotfixText">
+						<div class="center">Coming Soon:</div>
+					</div>
+					<div id="squadInfo" class="squadInfo show"></div>
+					<div id="squadList" class="squadList">
+						<div class="fHeight floatLeft squadWidth bravo"><div id="bravoF" class="bravo"></div></div>
+						<div class="fHeight floatLeft squadWidth charlie"><div id="charlieF" class="charlie"></div></div>
+						<div class="fHeight floatLeft squadWidth delta"><div id="deltaF" class="delta"></div></div>
+					</div>
+				</div>
+			</div>
+		</div>
