--- a/other/qualityAssurance/sprintIssues.html
+++ b/other/qualityAssurance/sprintIssues.html
@@ -5,7 +5,7 @@
 		<script src="domo.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-		<script>$(document).ready(function(){getSprintsList();showDate();});</script>
+		<script>$(document).ready(function(){getSprintsList();});</script>
 	</head>
 
 	<main class="main">
@@ -31,6 +31,8 @@
 					<div id="fireText"><div id="intro" class="intro"></div></div>
 				</div>
 			</div>
+<!-- 
 			<div id="footer" class=""><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
+ -->
 		</div>
 	</main>
