hotfix squads complete, started links
working on links page

--- a/other/qualityAssurance/hotfix.html
+++ b/other/qualityAssurance/hotfix.html
@@ -8,7 +8,7 @@
 		<script src="js/hotfix.js"></script>
 	</head>
 		<div id="hotfixMain" class="hotfixMain">
-			<h1 id="hotfixTitle" class="hotfixtitleFade">Hotfix Squads</h1>
+			<h1 id="hotfixTitle" class="hotfixTitle hotfixTitleFade">Hotfix Squads</h1>
 			<div id="hotfixBody" class="fullwidth hotfixFade">
 				<div id="hotfixLayout">
 					<div id="hotfixText">
