--- a/other/qualityAssurance/index.html
+++ b/other/qualityAssurance/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="header" class="tHover">
 			<div class="header domoFont white">DOMO&nbsp;-&nbsp;QA</div>
-			<span class="header3 darkBlue">v 2.0.1 - 10/18/2016</span>
+			<span class="header3 darkBlue">v 2.0.2 - 10/19/2016</span>
 		</div>
 		<div id="header2"><div class="header2 domoFont darkBlue">DOMO&nbsp;-&nbsp;QA</div></div>
 
@@ -30,11 +30,13 @@
 		<content id="content" class="contentBox"></content>
 
 		<div id="footer" class=""><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
+		<div id="links" class="linkLocation" onclick="linksShow('links')"><a href="#">Links</a></div>
 
 		<script src="js/nav.js"></script>
 		<script src="js/servers.js"></script>
 		<script src="js/sprint.js"></script>
 		<script src="js/team.js"></script>
 		<script src="js/hotfix.js"></script>
+		<script src="js/links.js"></script>
 	</body>
 </html>
