updated version, new features list

--- a/other/qualityAssurance/home.html
+++ b/other/qualityAssurance/home.html
@@ -4,9 +4,9 @@
 
 		<main class="main">
 			<h1 class="mTop titleFade">Quality Assurance</h1>
-			<div class="center"><b>Coming Soon:</b><br>
-				crowd source links<br>
-				helpful links
+			<div class="center"><b>- Requesting -</b><br>
+				Feedback<br>
+				Suggestions
 			</div>
 		</main>
 		<script src="js/home.js"></script>
