updated links, added active link icon

--- a/other/qualityAssurance/index.html
+++ b/other/qualityAssurance/index.html
@@ -30,7 +30,7 @@
 		<content id="content" class="contentBox"></content>
 
 		<div id="footer" class=""><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
-		<div id="links" class="linkLocation" onclick="linksShow('links')"><a href="#">Links</a></div>
+		<div id="links" class="linkLocation" onclick="linksShow('links')"><a href="#"></a></div>
 
 		<script src="js/nav.js"></script>
 		<script src="js/servers.js"></script>
