working on sCalc

--- a/other/cory/home.html
+++ b/other/cory/home.html
@@ -1,7 +1,7 @@
  	<head>
 		<link rel="stylesheet" href="css/home.css" />
 	</head>
-
+<!-- 	Home Page	-->
 		<main class="main">
 			<h1 class="mTop">Home</h1>
 			<div class="center"></div>
