--- a/other/cory/index.html
+++ b/other/cory/index.html
@@ -6,14 +6,14 @@
 		<script>$(document).ready(function(){home();});</script>
 
 <!--		<script>$("#content").load("home.html");</script>-->
+<!--	This is the index.html 	-->
 	</head>
 	<body>
 		<nav class="nav tabrow">
 			<ul>
 				<li id="home" onclick="home()" class="tabrow">Home</li>
 				<li id="calc" onclick="calc()" class="tabrow">Calc</li>
-				<li id="calc2" onclick="calc2()" class="tabrow">Calc 2</li>
-				<li id="sCalc" onclick="sCalc()" class="tabrow">SuperCalc</li>
+				<li id="calc" onclick="sCalc()" class="tabrow">SuperCalc</li>
 			</ul>
 		</nav>
 		<content id="content" class="content">
