--- a/other/cory/calc.html
+++ b/other/cory/calc.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/calc.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
-<!-- 
+<!-- This is the Calc Page
 	<body class="bw">
 		<content class="content">
  -->
