--- a/other/cory/sCalc.html
+++ b/other/cory/sCalc.html
@@ -1,4 +1,4 @@
-<!-- 
+
 <html>
  -->
  	<head>
@@ -6,54 +6,47 @@
 		<link rel="stylesheet" href="css/sCalc.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
-<!-- 
-	<body class="bw">
+<!-- This is the SuperCalc Page
+	<body class="bw"> 
 		<content class="content">
  -->
  		<main class="main">
-			<h1 onclick="resetAll()" class="mTop">Super Calc</h1>
-			<div class="center">
-				<input id="a" type="text" name="" value="5" class="iFields">
-				<input id="b" type="text" name="" value="10" class="iFields">
-				<input id="c" type="text" name="" value="2" class="iFields">
+			<div class="fullWidth center"><h1 onclick="resetAll()" class="mTop">Super Calc</h1></div>
+			<div id="rowTop" class="fullWidth floatLeft">
+				<div class="halfWidth extra tRight floatLeft">Current Value:&nbsp;&nbsp;&nbsp;</div>
+				<div class="halfWidth floatLeft"><input id="a" type="text" name="" value="0" class="iFields" readonly></div>
+			</div>
+			<br>
+			<div id="bLoc" class="center bLoc">
+				<input type="button" value="1" class="button" onclick="setValue(value)" />
+				<input type="button" value="2" class="button" onclick="setValue(value)" />
+				<input type="button" value="3" class="button" onclick="setValue(value)" />
+				<input type="button" value="4" class="button" onclick="setValue(value)" />
+				<input type="button" value="5" class="button" onclick="setValue(value)" />
 			</div>
 			<div id="bLoc" class="center bLoc">
-				<input type="button" value="Add" class="button" onclick="result('add',a.value,b.value,c.value)" />
-				<input type="button" value="Subtract" class="button" onclick="result('sub',a.value,b.value,c.value)" />
-				<input type="button" value="Multiply" class="button" onclick="result('multi',a.value,b.value,c.value)" />
-				<input type="button" value="Divide" class="button" onclick="result('divide',a.value,b.value,c.value)" />
-				<input type="button" value="Average" class="button" onclick="result('avg',a.value,b.value,c.value)" />
+				<input type="button" value="6" class="button" onclick="setValue(value)" />
+				<input type="button" value="7" class="button" onclick="setValue(value)" />
+				<input type="button" value="8" class="button" onclick="setValue(value)" />
+				<input type="button" value="9" class="button" onclick="setValue(value)" />
+				<input type="button" value="0" class="button" onclick="setValue(value)" />
+			</div>
+
+			<div class="fullWidth center">
+						<input type="button" value="Add" class="button" onclick="postSum()" />
 			</div>
 			<div class="fullWidth center">
-				<div id="answer" class="results"></div>
+				<br>
+				<div class=""><input id="c" type="text" name="formula" value="" class="formula" readonly></div>
+				<br>
 			</div>
-				<div id="rowFull" class="fullWidth bLoc center">
-					<div id="rowLeft" class="halfWidth floatLeft">
-						<div id="rowTop" class="fullWidth floatLeft"><input type="button" value="Reset Total" class="button" onclick="reset()" /></div>
-						<div id="rowBottom" class="fullWidth floatLeft mTop">
-							<div id="rowTop" class="halfWidth floatLeft"><div class="extra tRight">Total:</div></div>
-							<div id="rowBottom" class="halfWidth floatLeft"><div id="rTotal" class="floatLeft runningTotal answerWidth results extra"></div></div>
-						</div>
-					</div>
-					<div id="rowRight" class="halfWidth floatLeft">
-						<div id="rowTop" class="fullWidth floatLeft"><input type="button" value="Convert to Celsius" class="button" onclick="c2c()" /></div>
-						<div id="rowBottom" class="fullWidth floatLeft mTop ex">
-							<div id="rowTop" class="halfWidth floatLeft"><div class="extra tRight">Celsius:</div></div>
-							<div id="rowBottom" class="halfWidth floatLeft"><div id="celsius" class="floatLeft celsius answerWidth results extra"></div></div>
-						</div>
-					</div>
-				</div>
+			<div id="rowBottom" class="fullWidth floatLeft">
+				<div class="halfWidth extra tRight floatLeft">Total Sum:&nbsp;&nbsp;&nbsp;</div>
+				<div class="halfWidth floatLeft"><input id="b" type="text" name="" value="0" class="iFields" readonly></div>
 			</div>
 		</main>
-<!-- 
-		</content>
- --> 		<!-- domo.js optional utils -->
-<!-- 
-		<script src="domo.js"></script>
-		<script src="app.js"></script>
- -->
-		<script src="js/calc.js"></script>
+		<script src="js/sCalc.js"></script>
   	</body>
 <!-- 
 </html>
- -->
+-->
