updated QA to version 8, cory started dice

--- a/other/cory/index.html
+++ b/other/cory/index.html
@@ -13,7 +13,8 @@
 			<ul>
 				<li id="home" onclick="home()" class="tabrow">Home</li>
 				<li id="calc" onclick="calc()" class="tabrow">Calc</li>
-				<li id="calc" onclick="sCalc()" class="tabrow">SuperCalc</li>
+				<li id="superCalc" onclick="sCalc()" class="tabrow">sCalc</li>
+				<li id="diceGame" onclick="dGame()" class="tabrow">Dice</li>
 			</ul>
 		</nav>
 		<content id="content" class="content">
