working on game
use debugger all items are text

--- a/other/cory/dGame.html
+++ b/other/cory/dGame.html
@@ -13,7 +13,7 @@
 		<content class="content">
  -->
  		<main class="main">
-			<div class="fullWidth1 center1 extra1 mTop1"><h1 onclick="clearCurrent()" class="">Dice Game</h1></div>
+			<div class="fullWidth1 center1 extra1 mTop1"><h1 onclick="clearCurrent()" class="">Roll da Bones</h1></div>
 
 			<div id="startRow" class="fullWidth1 center1 extra1">
 				<input type="button" id="gameStart" value="Start Game" class="startButton" onclick="startGame()" />
