Adding director filter option

--- a/other/qualityAssurance/teams.html
+++ b/other/qualityAssurance/teams.html
@@ -8,7 +8,10 @@
 			<div id="teamBody" class="fullwidth teamFade">
 				<div id="teamLayout">
 					<div id="teamText">
-						<div class="floatLeft teamsList">Team</div><div class="floatLeft qaList">QA</div><div class="floatLeft featuresList ffeaturesList">Features</div><div class="floatLeft directorList">Director</div>
+						<div class="floatLeft teamsList">Team</div><div class="floatLeft qaList">QA</div><div class="floatLeft featuresList ffeaturesList">Features</div>
+						<div tabindex="0" class="floatLeft directorList onclick-menu">
+							<ul id="DL" class="onclick-menu-content"></ul>
+						</div>
 					</div>
 					<div id="squadInfo" class="squadInfo"></div>
 					<div id="squadList" class="squadList">
