--- a/other/qualityAssurance/teams.html
+++ b/other/qualityAssurance/teams.html
@@ -9,9 +9,8 @@
 				<div id="teamLayout">
 					<div id="teamText">
 						<div class="floatLeft teamsList">Team</div><div class="floatLeft qaList">QA</div><div class="floatLeft featuresList ffeaturesList">Features</div>
-						<div tabindex="0" class="floatLeft directorList onclick-menu">
-							<ul id="DL" class="onclick-menu-content"></ul>
-						</div>
+						<div class="floatLeft directorList onclick-menu" onclick="dMenu()">Director<div id="MDL" class="dropdown-content"></div>
+ 						</div>
 					</div>
 					<div id="squadInfo" class="squadInfo"></div>
 					<div id="squadList" class="squadList">
