--- a/other/kp_platformFeatures/index.html
+++ b/other/kp_platformFeatures/index.html
@@ -2,20 +2,19 @@
 	<head>
 		<link rel="stylesheet" href="css/pf.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="js/domo.js"></script>
+		<script src="js/app.js"></script>
 		<script src="js/pf.js"></script>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<script>$(document).ready(function(){getPlatformData();});</script>
 	</head>
 	<body>
 		<div id="bodyContainer" class="fullWidth">
-			<div id="bodyTitle" class="fullWidth mTitle aCenter">Feature Comparison by Platform</div>
+			<div id="bodyTitle" class="fullWidth mTitle aCenter"></div>
 			<div id="dataContainer" class="fullWidth">
-				<div id="dataColumnsRow" class="fLeft fullWidth cTitles aCenter"><div class="fLeft fWidth ">Feature</div><div class="fLeft fSubWidth">Subfeature</div><div class="fLeft platformWidth">Desktop</div><div class="fLeft platformWidth">iOS</div><div class="fLeft platformWidth">Android</div><div class="fLeft platformWidth">Mobile Web</div></div>
+				<div id="dataColumnsRow" class="fLeft fullWidth cTitles aCenter"><div class="fLeft fWidth ">Feature</div><div class="fLeft fSubWidth">Subfeature</div><div class="fLeft platformWidthT">Desktop</div><div class="fLeft platformWidthT">iOS</div><div class="fLeft platformWidthT">Android</div><div class="fLeft platformWidthT">Mobile</div></div>
 				<div id="dataRows" class="rowContainer"></div>
 			</div>
 		</div>
 	</body>
-		<!-- domo.js optional utils -->
-		<script src="js/domo.js"></script>
-		<script src="js/app.js"></script>
-
 </html>
