pNav showed me how to use toggle jquery

--- a/other/kp_platformFeatures/index.html
+++ b/other/kp_platformFeatures/index.html
@@ -13,6 +13,9 @@
 	</head>
 	<body>
 		<div id="bodyContainer" class="fullWidth">
+<!-- 
+		<div id="p0p" class='open-close is-closed' onclick="sparents()">Test open close div</div>
+ -->
 			<div id="bodyTitle" class="fullWidth mTitle aCenter"></div>
 			<div id="dataContainer" class="fullWidth cTitlesB">
 				<div id="dataColumnsRow" class="fLeft fullWidth fullWidthx cTitles aCenter"><div class="fLeft fWidth ">Feature</div><div class="fLeft fSubWidth">Subfeature</div><div class="fLeft platformWidthT">Desktop</div><div class="fLeft platformWidthT">iOS</div><div class="fLeft platformWidthT">Android</div><div class="fLeft platformWidthT">Mobile</div></div>
