working on media placement of nav and logo

--- a/other/qualityAssuranceV2/homePage.html
+++ b/other/qualityAssuranceV2/homePage.html
@@ -6,7 +6,7 @@
 
 		<main id="home" class="main">
 			<h1 class="titleFade">Quality Assurance</h1>
-			<div class="center"><b>- Requesting -</b><br>Feedback<br>Suggestions</div>
+			<div class="center"></div>
 		</main>
 
 		<script src="js/home.js"></script>
