--- a/other/qualityAssuranceV2/index.html
+++ b/other/qualityAssuranceV2/index.html
@@ -14,11 +14,6 @@
  -->
 	</head>
 	<body>
-		<div id="headerBase" class="tHover">
-			<div class="header2 domoFont darkBlue">DOMO&nbsp;-&nbsp;QA</div>
-			<div class="header1 domoFont white">DOMO&nbsp;-&nbsp;QA</div>
-			<span id="version" class="header3Version darkBlue">v2 1.0.0 - 02/02/2017</span>
-		</div>
 <!-- Nav menu -->
 		<menu>
 			<div class="nav">
@@ -34,11 +29,21 @@
 			</div>
 		</menu>
 <!-- Nav menu end -->
+<!-- QA Logo -->
+		<qaLogo>
+			<div id="headerBase" class="tHover">
+				<div class="header2 domoFont darkBlue">DOMO&nbsp;-&nbsp;QA</div>
+				<div class="header1 domoFont white">DOMO&nbsp;-&nbsp;QA</div>
+				<span id="version" class="header3Version darkBlue">v2 1.0.0 - 02/02/2017</span>
+			</div>
+		</qaLogo>
+<!-- QA Logo end -->
+<!-- App body / footer -->
 		<content id="content" class="contentBox"></content>
 
 		<div id="footer"><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
 		<div id="links" class="linkNav linkLocation" onclick="linksShow('links')"><a href="#">Team Links</a></div>
-
+<!-- App body / footer end -->
 		<script src="js/nav.js"></script>
 		<script src="js/servers.js"></script>
 		<script src="js/team.js"></script>
