fixed home page
fixed home page, change page title
fixed js files association through out page

--- a/other/qualityAssuranceV2/homePage.html
+++ b/other/qualityAssuranceV2/homePage.html
@@ -1,11 +1,11 @@
  	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="css/home.css" />
-		<script>$(document).ready(function(){testDate();updated();});</script>
+		<script>$(document).ready(function(){qaName();testDate();updated();});</script>
 	</head>
 
 		<main id="home" class="main">
-			<h1 class="titleFade">Quality Assurance</h1>
+			<div id="qaTitle" class="vertTitle"></div>
 			<div class="center"></div>
 		</main>
 
