--- a/other/qualityAssuranceV2/index.html
+++ b/other/qualityAssuranceV2/index.html
@@ -9,9 +9,6 @@
 		<script src="domo.js"></script>
 		<script src="app.js"></script>
 		<script>$(document).ready(function(){homePage('homePage');displayDate();vText();});</script>
-<!-- 
-		<script>$(document).ready(function(){homePage('homePage');displayDate();vText();});</script>
- -->
 	</head>
 	<body>
 <!-- Nav menu -->
@@ -34,7 +31,7 @@
 			<div id="headerBase" class="tHover">
 				<div class="header2 domoFont darkBlue">DOMO&nbsp;-&nbsp;QA</div>
 				<div class="header1 domoFont white">DOMO&nbsp;-&nbsp;QA</div>
-				<span id="version" class="header3Version darkBlue">v2 1.0.0 - 02/02/2017</span>
+				<span id="version" class="header3Version darkBlue"></span>
 			</div>
 		</qaLogo>
 <!-- QA Logo end -->
