--- a/other/qualityAssuranceV2/index.html
+++ b/other/qualityAssuranceV2/index.html
@@ -39,7 +39,7 @@
 		<content id="content" class="contentBox"></content>
 
 		<div id="footer"><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
-		<div id="links" class="linkNav linkLocation" onclick="linksShow('links')"><a href="#">Team Links</a></div>
+		<div id="links" class="linkNav linkLocation" onclick="linksShow('links')"><a href="#">Quick Links</a></div>
 <!-- App body / footer end -->
 		<script src="js/nav.js"></script>
 		<script src="js/servers.js"></script>
