working on team page still

--- a/other/qualityAssuranceV2/teams.html
+++ b/other/qualityAssuranceV2/teams.html
@@ -2,6 +2,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="css/teams.css" />
 		<script src="js/team.js"></script>
+		<script>$(document).ready(function(){teamTitleFade();});</script>
 	</head>
 		<div id="teamMain" class="teamMain">
 			<h1 id="teamTitle" class="teamtitleFade">Quality Assurance by Team</h1>
