--- a/other/qualityAssuranceV2/index.html
+++ b/other/qualityAssuranceV2/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="css/nav.css" />
 		<link rel="stylesheet" href="css/media.css" />
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="domo.js"></script>
 		<script src="app.js"></script>
 		<script>$(document).ready(function(){homePage('homePage');displayDate();vText();});</script>
@@ -36,7 +36,7 @@
 		</qaLogo>
 <!-- QA Logo end -->
 <!-- App body / footer -->
-		<content id="content" class="contentBox"></content>
+		<content id="content" class="contentBox">content data</content>
 
 		<div id="footer"><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
 		<div id="links" class="linkNav linkLocation" onclick="linksShow('links')"><a href="#">Quick Links</a></div>
@@ -51,6 +51,9 @@
 		<script src="js/sprint.js"></script>
 -->
 	</body>
+		<script src="domo.js"></script>
+		<script src="app.js"></script>
+
 </html>
 
 
