--- a/other/qualityAssuranceV2/teams.html
+++ b/other/qualityAssuranceV2/teams.html
@@ -9,7 +9,7 @@
 			<div id="teamBody" class="tfull teamFade">
 				<div id="teamLayout">
 					<div id="teamText">
-						<div class="tleft teamsList">Team</div><div class="tleft qaList">QA</div><div class="tleft featuresList ffeaturesList">Features</div>
+						<div class="tleft teamsList">Team</div><div class="tleft qaList">QA</div><div class="tleft featuresList">Features</div>
 						<div class="tleft directorList onclick-menu" onclick="dMenu()">Director<div id="MDL" class="dropdown-content"></div>
  						</div>
 					</div>
