--- a/other/qualityAssuranceV2/servers.html
+++ b/other/qualityAssuranceV2/servers.html
@@ -1,5 +1,6 @@
  	<head>
 		<link rel="stylesheet" href="css/servers.css" />
+		<link rel="stylesheet" href="css/media.css" />
 		<script>$(document).ready(function(){serverTitleFade();getServerList();});</script>
 	</head>
 
