--- a/other/qualityAssuranceV2/teams.html
+++ b/other/qualityAssuranceV2/teams.html
@@ -1,6 +1,7 @@
  	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="css/teams.css" />
+		<link rel="stylesheet" href="css/media.css" />
 		<script src="js/team.js"></script>
 		<script>$(document).ready(function(){teamTitleFade();});</script>
 	</head>
