updated for mobile fixes

--- a/other/qualityAssuranceV2/index.html
+++ b/other/qualityAssuranceV2/index.html
@@ -15,10 +15,10 @@
 		<menu>
 			<div class="nav">
 				<ul>
-					<li id="homePage" onclick="homePage('homePage')"><a href="#" class="active">Home</a></li>
-					<li id="teams" onclick="teams('team')"><a href="#">Teams</a></li>
-					<li id="servers" onclick="servers('server')"><a href="#">Servers</a></li>
-					<li id="hfSquad" onclick="hfSquad('hfSquad')"><a href="#">Hotfix</a></li>
+					<li id="homePage" onclick="homePage('homePage')"><a class="active">Home</a></li>
+					<li id="teams" onclick="teams('team')"><a>Teams</a></li>
+					<li id="servers" onclick="servers('server')"><a>Servers</a></li>
+					<li id="hfSquad" onclick="hfSquad('hfSquad')"><a>Hotfix</a></li>
 <!-- 
 					<li id="sprints" onclick="sprints('sprint')"><a href="#">Sprints</a></li>
  -->
@@ -26,6 +26,7 @@
 			</div>
 		</menu>
 <!-- Nav menu end -->
+
 <!-- QA Logo -->
 		<qaLogo>
 			<div id="headerBase" class="tHover">
@@ -39,14 +40,15 @@
 		<content id="content" class="contentBox">content data</content>
 
 		<div id="footer"><div id="rCount" class="rCount"></div><div id="message" class="message"></div></div>
-		<div id="links" class="linkNav linkLocation" onclick="linksShow('links')"><a href="#">Quick Links</a></div>
+		<div id="links" class="linkNav linkLocation" onclick="linksShow('links')"><a>Quick Links</a></div>
 <!-- App body / footer end -->
 		<script src="js/nav.js"></script>
+<!-- 
 		<script src="js/servers.js"></script>
 		<script src="js/team.js"></script>
 		<script src="js/hotfix.js"></script>
 		<script src="js/links.js"></script>
-
+ -->
 <!-- Removing sprints page
 		<script src="js/sprint.js"></script>
 -->
