--- a/other/qualityAssuranceV2/servers.html
+++ b/other/qualityAssuranceV2/servers.html
@@ -1,4 +1,5 @@
  	<head>
+ 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/servers.css" />
 		<link rel="stylesheet" href="css/media.css" />
 		<script>$(document).ready(function(){serverTitleFade();getServerList();});</script>
